--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App-header {
-  background-color: #ffffff;
+  background-color: #3d4047;
   min-height      : 100vh;
   display         : flex;
   flex-direction  : column;
